src/objects/AcccDataCachingDataModel__mdt.object
<CustomObject>
    <description>Outlines the data to cache</description>
    <fields>
        <fullName>CachePartition__c</fullName>
        <defaultValue>&apos;work&apos;</defaultValue>
        <description>The cache partition used in Platform Cache. Default is &apos;work&apos;</description>
        <inlineHelpText>The cache partition used in Platform Cache.Default is &apos;work&apos;</inlineHelpText>
        <label>Cache Partition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CachingEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this information Cached</description>
        <inlineHelpText>is this information cached</inlineHelpText>
        <label>CachingEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>The category</description>
        <inlineHelpText>The category</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContainFields__c</fullName>
        <description>define a regular expression to look for characters, values, or keywords</description>
        <inlineHelpText>define a regular expression to look for characters, values, or keywords</inlineHelpText>
        <label>ContainFields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TimeToLiveMS__c</fullName>
        <description>time to live in millsec</description>
        <inlineHelpText>time to live in millsec, if -1 one then exists until cleared.</inlineHelpText>
        <label>TimeToLiveMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Accc DataCaching</label>
    <pluralLabel>Accc DataCachings</pluralLabel>
</CustomObject>